minor things to change

--- a/components/education/education.css
+++ b/components/education/education.css
@@ -1,9 +1,4 @@
-.timeline-container {
-    padding: 20px;
-    background-color: #000;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-}
+.timeline-container {}
 
 
 
@@ -13,9 +8,9 @@
 }
 
 .timeline-item-content {
-    background-color: #007acc;
-    border: 2px solid #007acc;
-    border-radius: 10px;
+    background-color: #0099ff;
+    border: 2px solid #049bff;
+    border-radius: 20px;
     padding: 20px;
     flex: 1;
 }
