--- a/app/cursor.css
+++ b/app/cursor.css
@@ -1,5 +1,6 @@
 .custom-cursor {
-    cursor: url("data:image/svg+xml,%3Csvg height='6' width='6' viewBox='0 0 8 8' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='4' cy='4' fill='%23eee' stroke='%2000' stroke-width='4' r='4'/%3E%3C/svg%3E") 3 3, auto;
+    cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3E%3Ccircle cx='15' cy='15' r='13' stroke='%2361dafb' stroke-width='2' fill='transparent' /%3E%3Ccircle cx='15' cy='15' r='2' fill='%23ffffff' /%3E%3C/svg%3E") 15 15, auto;
     scroll-behavior: smooth;
     overflow-x: hidden;
-}
+  }
+  
