--- a/components/education/education.css
+++ b/components/education/education.css
@@ -1,4 +1,3 @@
-.timeline-container {}
 
 
 
@@ -8,8 +7,8 @@
 }
 
 .timeline-item-content {
-    background-color: #0099ff;
-    border: 2px solid #049bff;
+    background-color: #268cd1;
+    border: 2px solid #268cd1;
     border-radius: 20px;
     padding: 20px;
     flex: 1;
